Tue Mar 29 11:57:50 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/server/query.c src/ctlib/blk.c:
	- remove some warnings

Mon Mar 28 09:52:42 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c src/tds/unittests/convert.c:
	- optimizations for char -> numeric conversions

Fri Mar 25 17:21:07 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- use new function to change scale/precesion
	* src/tds/numeric.c:
	- use asm to improve performance on Intel

Thu Mar 24 15:43:14 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/numeric.c src/tds/numeric.pl:
	* src/tds/unittests/numeric.c:
	- change precision and scale of numeric together

Wed Mar 23 17:50:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/Makefile.am: fix distribution
	* src/tds/numeric.c: fix compile, remove ugly goto

Wed Mar 23 17:50:56 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/Makefile.am src/tds/numeric.c:
	* src/tds/unittests/Makefile.am:
	* src/tds/unittests/numeric.c(added):
	- scale numeric in a faster way
	* misc/test-auto.sh: updated, better output

Mon Mar 14 13:48:36 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/token.c: avoid infinite loop on cancel

Sun Mar 13 09:16:17 PST 2005	Peter Deacon <peterd@iea-software.com>
	* src/odbc/error.c: rank did not clear trans status

Sun Mar 13 11:21:40 CET 2005    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/error.c:
	- make rank_errors static
	- change style
	* src/tds/net.c: int FAR have no sense in no pointer context

Sat Mar 12 01:23:17 PST 2005	Peter Deacon <peterd@iea-software.com>
	* include/tdsodbc.h src/odbc/error.c:
	- order messages by severity and type
	* include/tds_sysdep_private.h src/tds/util.c src/tds/login.c
	* src/tds/config.c:
	- fixed incorrect client process id on the windows platform
	* src/tds/query.c: include numeric characters in quote exception